<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.astrowest.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/astronomy" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:paddingRight="12dp"
            android:paddingTop="85dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/contactText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coverImage"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/contact_info"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/scheduleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactText"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:text="@string/schedule"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scheduleText"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/location"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationText"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/about_us"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutText"
            android:fontFamily="sans-serif"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/description"
            android:textSize="15sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
